2012-02-03  Rene Liebscher <R.Liebscher@gmx.de>

	patch #7687: Autogenerating programmers and parts lists for docs
	(generating the programmers lists)
	* doc/avrdude.texi: Add include of generated table of programmers
	* doc/Makefile.am: Add generating of table of programmers in programmers.texi

2012-02-03  Rene Liebscher <R.Liebscher@gmx.de>

	bug #34768 Proposition: Change the name of the AVR32 devices
	* avrdude.conf.in: renamed ucr2 to uc3a0512
	* avrpart.c: added cast to avoid compiler warning

2012-02-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c (fileio_elf): Fix a copy'n-paste-o.

2012-02-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* par.c (par_desc): Move to end of file, outside the #if
	HAVE_PARPORT

2012-02-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement ELF file reading (finally).  Requires libelf(3) to be
	present on the host system.
	* configure.ac (HAVE_LIBELF): Add logic to detect presence of
	libelf(3)
	* Makefile.am (avrdude_LDADD): Add @LIBELF@
	* fileio.h (FILEFMT): add FMT_ELF
	* fileio.c: Implement ELF file reader.
	* update.c (parse_op): add 'e' format specifier
	* avrdude.1: Document the ELF file reading capability
	* doc/avrdude.texi: (Dito.)

2012-02-01  Rene Liebscher <R.Liebscher@gmx.de>

	bug #30559 Ft232 bit-bang support
	* ft245r.[ch]: new programmer type implementation
	* configure.ac: add pthread as link library
	* avrdude.conf.in: added some new programmers
	* Makefile.am: added new source files to compile
	* pindefs.h: change PIN_MASK, PIN_INVERSE to highest bit of unsigned int
	* pgm.[ch]: added generic function to print pin assignments (taken from par.c)
	* par.c: moved pin assigment print function to pgm.c

2012-02-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* lexer.l: Sort keyword tokens into alphabetic order.

2012-01-31  Rene Liebscher <R.Liebscher@gmx.de>

	* config_gram.y, lexer.l: removed unused ID/TKN_ID definitions
	* config.[hc]: removed unused function id(), use value.type to select